--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="wdinstagram">
   <head>
     <title>Angular</title>
     <link rel="stylesheet" href="style.css" />
@@ -11,5 +11,6 @@
     <script src="js/app.js"></script>
   </head>
   <body>
+    <div ui-view></div>
   </body>
 </html>
