--- a/js/ng-views/index.html
+++ b/js/ng-views/index.html
@@ -3,4 +3,5 @@
 <h2>I'm the Wdinstagram Index</h2>
 <div ng-repeat="instagram in vm.instagrams">
 	<p><a ui-sref="wdinstagramShow({id: $index + 1})">{{instagram.body}}</a></p>
+	<a ui-sref="wdinstagramEdit({id: $index + 1})">Edit</a>
 </div>
